# us-stock-rag-guide

./: .env.example  .gitignore  .vercelignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  vercel.json
agent/: .env.example  .gitignore  Dockerfile  INTEGRATION.md  README.md  start.sh
agent/backend/: index.py  pyproject.toml  requirements.txt
agent/backend/app/: __init__.py  agent.py  chunking.py  config.py  main.py  prompts.py  rag.py  retriever.py
agent/backend/scripts/: ingest.py
agent/backend/tests/: test_clarification.py  test_request_validation.py
agent/eval/: BASELINE_FINDINGS_20260714.md  EVAL_PLAN.md  EVAL_SET_DESIGN.md  EVAL_V2_PLAN.md  HUMAN_EVAL_RUBRIC.md  INTERVIEW_TALK_TRACK.md  eval_config.json  (+9 more)
app/: globals.css  layout.tsx  page.tsx
asset-tracker/: .env.example  .gitignore  DEPLOY.md  Dockerfile  INTEGRATION.md  README.md  render.yaml  start.sh
asset-tracker/backend/: index.py  pyproject.toml  requirements.txt
asset-tracker/backend/app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
asset-tracker/backend/app/services/: fx.py  ib_sync.py  market_hours.py  performance.py  quotes.py
asset-tracker/backend/quote-bridge/: fetch.mjs  package-lock.json  package.json
asset-tracker/backend/tests/: test_security.py
components/: SiteFooter.tsx
docs/: GO_LIVE.md  PUBLIC_LAUNCH.md
scripts/: ingest-content.mjs  migrate-invest-nav.mjs  optimize-content-images.mjs  preflight.mjs  start-all.sh  stop-all.sh
supabase/: analytics.sql  auth_and_quota.sql  schema.sql
(+136 files in other folders)
