[project]
name = "us-stock-rag-agent"
version = "1.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "python-dotenv==1.0.1",
  "openai==1.58.1",
  "pymupdf==1.25.1",
  "jieba==0.42.1",
  "rank-bm25==0.2.2",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
  "httpx==0.28.1",
  "sse-starlette==2.1.3",
]
