[project]
name = "us-stock-asset-tracker-api"
version = "1.0.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "akshare>=1.14.0",
  "pandas>=2.0.0",
  "tzdata>=2024.1",
  "psycopg2-binary>=2.9.9",
  "ib_insync>=0.9.86",
  "nest_asyncio>=1.5.0",
]
